// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MKBadge renders large info badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-dpqpzw-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders large info contained badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-aon6b0-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders medium white badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-dpqpzw-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders medium white contained badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-1e0cypa-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders small light badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-1ww9fgc-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;
